# ImageGenie

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  capture_renders.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: remind-domain-doc.sh
.claude/skills/pipeline-down/: SKILL.md
.claude/skills/pipeline-up/: SKILL.md
infra/: .gitignore  api.tf  apis.tf  artifact_registry.tf  budget.tf  cloud_run.tf  database.tf  preprocessing.tf  pubsub.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
ml/: build_class_list.py  eval_weak_labels.py  explore_metadata.py  io_utils.py  ml.md  taxonomy.py  weak_label.py
scripts/: adopt_schema.sh  check_deploy.sh  wipe_buckets.sh
server/: Dockerfile  alembic.ini  docker-compose.yml  requirements.txt  server.md
server/alembic/: env.py
server/alembic/versions/: 0b6b4972c9e9_add_dead_letter_table.py  a7870d170672_initial_schema.py  fb0e0e1af523_add_model_deleted_at_for_soft_delete.py
server/app/: api.py  artifact_keys.py  backfill_labels.py  backfill_metadata.py  config.py  consumer.py  create_admin.py  db.py  dead_letters.py  mail.py  models.py  queue.py  ratelimit.py  reconcile_from_storage.py  replay_dlq.py  security.py  seed.py  storage.py  web.py
server/app/workers/: artifacts.py  convert.py  download.py  mesh.py  normalize.py  render.py
server/tests/: conftest.py  test_api.py  test_artifact_keys.py  test_artifacts_api.py  test_auth.py  test_backfill_labels.py  test_backfill_metadata.py  test_config.py  test_consumer.py  test_convert.py  test_create_admin.py  test_dead_letters.py  test_download.py  test_gcs_storage.py  test_mail.py  test_migrations.py  test_models.py  test_normalize.py  test_queue.py  test_ratelimit.py  test_reconcile_from_storage.py  test_render.py  test_signup.py  test_soft_delete.py  test_spa.py  test_storage.py  test_upload.py  test_web.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  web.md
web/src/: App.tsx  index.css  main.tsx
web/src/api/: auth.ts  catalog.ts  client.ts  errors.ts  mockDb.ts  types.ts
web/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
web/src/components/: AppLayout.tsx  ConfirmButton.tsx  ModelCard.tsx  ModelViewer.tsx
web/src/pages/: BrowsePage.tsx  DeadLettersPage.tsx  DeletedModelsPage.tsx  DetailPage.tsx  HomePage.tsx  InvitePage.tsx  LoginPage.tsx  ResendVerificationPage.tsx  SignupPage.tsx  UploadPage.tsx  (+1 more)
