[project]
name = "imagegenie"
version = "0.1.0"
description = "3D model classification pipeline"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff==0.6.9"]

[tool.setuptools]
# No importable package yet — pipeline entrypoints are run as scripts
# (`python ml/explore_metadata.py`). Empty so `pip install .[dev]` doesn't trip
# setuptools' flat-layout auto-discovery over ml/ server/ web/ data/.
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
