[project]
name = "imagegenie"
version = "0.1.0"
description = "3D model classification pipeline"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff==0.6.9", "pytest==9.1.1", "testcontainers==4.14.2", "httpx==0.28.1"]

[tool.setuptools]
# No importable package yet — pipeline entrypoints are run as scripts
# (`python ml/explore_metadata.py`). Empty so `pip install .[dev]` doesn't trip
# setuptools' flat-layout auto-discovery over ml/ server/ web/ data/.
py-modules = []

[tool.pytest.ini_options]
# Server tests import the `app` package; put server/ on the path.
pythonpath = ["server"]
testpaths = ["server/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic writes these; they're machine-generated and reformatting them by hand
# only creates noise in the next autogenerate diff. Reviewed as SQL, not style.
extend-exclude = ["server/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
# The server package is imported as `app` in tests; group it as first-party.
known-first-party = ["app"]
